--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,15 +10,23 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: true
+        bind:
+            $projectDir: '%kernel.project_dir%'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
+    App\Domain\:
+        resource: '../src/Domain/*/{Repository,Service,Validator}'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - '../src/Domain/*/Service/Dto'
+            - '../src/Domain/*/Service/*/Collection'
+            - '../src/Domain/*/Service/*/Exception'
+
+    App\Http\:
+        resource: '../src/Http/'
+        exclude:
+            - '../src/Http/*/Action/*/*/Dto'
+            - '../src/Http/*/Response/Data'
+            - '../src/Http/*/Request'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
