--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://elastic:9200/
+###< friendsofsymfony/elastica-bundle ###
