--- a/config/routes/v1/posts.yaml
+++ b/config/routes/v1/posts.yaml
@@ -18,3 +18,8 @@ v1-post-read:
     controller: App\Http\V1\Action\Post\Read\ReadAction
     methods: GET
 
+v1-post-user:
+    path: /user/{id}/posts
+    controller: App\Http\V1\Action\Post\ByUser\ByUserAction
+    methods: GET
+
